# cala

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-preview.yaml  docs.yaml  lint.yaml  python-package.yml  tests.yml
configs/: config.py
docs/: conf.py  features.md  implementation_details.md  index.md  package_structure.md  river.md
docs/_static/css/: notebook.css
docs/misc/: dev_guide.md  implementation_details.md  river.md  user_guide.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: config.js  main.js  styles.css  switch.js
frontend/src/components/: frameNumber.js  lineChart.js  utils.js  videoPlayer.js
frontend/src/css/: grids.css
frontend/src/utils/: webSocket.js
frontend/templates/: index.html
scripts/: benchmarking.py  memory_usage.py  yappi_profile.py
src/: data_io.py  log.py
src/cala/: __init__.py  __main__.py  assets.py  cli.py  config.py  connection_manager.py  dashboard.py  data_io.py  execute.py  io.py  log.py  logging.py  main.py  preprocessing.py  runner.py  util.py  utilities.py
src/cala/arrays/: __init__.py  assets.py  validate.py
src/cala/assets/: __init__.py  assets.py  axis.py  validate.py  xr_access.py
src/cala/cell_recruitment/: __init__.py  detection.py  labeling.py  merge.py  merging.py  signal_processing.py
src/cala/config/: __init__.py  base.py  cala_config.yaml  config.py  config.yaml  general.py  gui.py  pipe.py  yaml.py
src/cala/config_examples/: cala_config.yaml
src/cala/core/: distribute.py  distro.py  execute.py
src/cala/gui/: __init__.py  __main__.py  app.py  const.py  dependencies.py  deps.py  message.py  plots.py  routes.py  runner.py  socket_manager.py  spec.py  spec.yaml  util.py
src/cala/models/: __init__.py  access.py  axis.py  checks.py  component.py  config.py  dash.py  data.py  dim.py  entity.py  group.py  observable.py  params.py  spec.py  store.py  validation.py
src/cala/motion_correction/: __init__.py  base.py  correction.py  corrector.py  estimation.py  rigid_translation.py  transformation.py  utils.py
src/cala/nodes/: buffer.py  cleanup.py  component_stats.py  footprints.py  io.py  merge.py  overlap.py  pixel_stats.py  remove.py  residual.py  traces.py
src/cala/preprocess/: __init__.py  background_erasure.py  background_removal.py  denoise.py  downsample.py  glow_removal.py
src/cala/segmentation/: filtration.py  metrics.py
src/cala/stores/: common.py  odl.py
src/cala/streaming/: pipe_config.py  runner.py
src/cala/templates/: index.html
src/cala/testing/: __init__.py  catalog_depr.py  nodes.py  simulate.py  simulation.py  toy.py  util.py
src/cala/util/: buffer.py  new.py
src/cala/video_stabilization/: base.py  rigid_translation.py
tests/: conftest.py  fixtures.py  profile_fixtures.py  sanity_fixtures.py  test_assets.py  test_config.py  test_data_io.py  test_downsample.py  test_e2e.py  test_gui.py  test_integration.py  test_io.py  test_log.py  test_logging.py  test_motion_correction.py  test_pipe.py  test_pipeline.py  test_preprocessing.py  test_runner.py  test_spec.py  test_util.py  test_viz.py  test_yaml.py  visual_helper.py  viz_util.py
tests/config/: integration.yaml
tests/data/pipelines/: basic.yaml  cala_basic.yaml  cyclic.yaml  full.yaml  gui.yaml  ingest.yaml  iter.yaml  jumbled.yaml  long_recording.yaml  minian.yaml  odl.yaml  prep.yaml  reference_a.yaml  reference_b.yaml  segment.yaml  single_cell.yaml  test_config.yaml  two_cells.yaml  two_overlap_cells.yaml  with_src.yaml
tests/fixtures/: __init__.py  config.py  mini.py  simple.py  sims.py  simulation.py  toys.py
tests/integration/: test_runner.py
tests/test_batch/: test_data_io.py
tests/test_batch/test_preprocess/: test_background_erasure.py  test_denoise.py  test_downsample.py  test_glow_removal.py
tests/test_batch/test_video_stabilization/: test_rigid_translation.py
tests/test_cell_recruitment/: conftest.py
tests/test_cell_recruitment/test_detect/: conftest.py  test_detection.py  test_max_projection.py
tests/test_cell_recruitment/test_filter/: conftest.py  test_common.py  test_distribution.py  test_gaussian_mixture_model.py  test_intensity.py
tests/test_composer/: test_runner.py
tests/test_config/: test_base.py  test_pipe.py
tests/test_core/: test_distribution.py  test_distro.py  test_execute.py  test_runner.py  test_store.py
tests/test_gui/: test_config.yaml  test_gui.py
tests/test_init/: test_comp_stats.py  test_footprints.py  test_overlaps.py  test_pixel_stats.py  test_residual.py  test_traces.py
tests/test_init/test_cold/: test_cold_start.py
tests/test_iter/: test_catalog.py  test_cleanup.py  test_cold_start.py  test_component_stats.py  test_detect.py  test_footprints.py  test_merge.py  test_overlaps.py  test_pixel_stats.py  test_residual.py  test_slice_nmf.py  test_traces.py
tests/test_motion_correction/: motion_correction_speed_check.py  test_base.py  test_rigid_translation.py
tests/test_omf/: test_component_stats.py  test_footprints.py  test_overlaps.py  test_pixel_stats.py  test_residual.py  test_traces.py
tests/test_prep/: test_anchor.py  test_background_removal.py  test_denoise.py  test_flatten.py  test_glow_removal.py  test_hlines.py  test_lines.py  test_motion.py  test_motion2.py  test_r_estimate.py  test_rigid_stabilization.py
tests/test_preprocess/: test_background_erasure.py  test_background_removal.py  test_denoise.py  test_downsample.py  test_glow_removal.py  test_prep.py  test_rigid_stabilization.py
tests/test_segment/: test_catalog.py  test_cleanup.py  test_merge.py  test_slice_nmf.py
tests/test_segmentation/test_detect/: conftest.py  test_common.py  test_max_projection.py
tests/test_segmentation/test_filter/: conftest.py  test_common.py  test_distribution.py  test_gaussian_mixture_model.py  test_intensity.py
tests/test_stores/: test_common.py  test_odl.py
tests/test_streaming/integration/: integration.yaml  (+1 more)
tests/test_util/: test_buffer.py  test_frame.py
tests/test_video_stabilization/: test_base.py  test_rigid_translation.py
(+388 files in other folders)
