[tool.poetry]
name = "cala"
version = "0.1.0"
description = ""
authors = ["Raymond W. Chang <raymond.w.jang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dask = "^2024.9.0"
zarr = "^2.18.3"
pytest = "^8.3.3"
pydantic = "^2.9.2"
av = "^13.0.0"
numpydantic = "^1.6.3"
opencv-python = "^4.10.0.84"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
